syncdoc/tests/roundtrip/snapshots/section/roundtrip__helpers__docs_section_TreeNode_node_type.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
The type of node (directory, file, or section)
