syncdoc/tests/roundtrip/snapshots/section/roundtrip__helpers__docs_section_TreeNode_section_index.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Index of the actual section if this is a Section node
