syncdoc/tests/roundtrip/snapshots/section/roundtrip__helpers__docs_section_TreeNode_tree_level.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Nesting level in the tree (for indentation/box-drawing)
